--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,20 @@
 @import "tailwindcss";
 @import "tw-animate-css";
 
+
+
 @custom-variant dark (&:is(.dark *));
 
 html, body {
   margin: 0;
   padding: 0;
+}
+
+
+@layer base {
+  :root {
+    /* colores de theme, si los tienes */
+  }
 }
 
 @theme inline {
